# live-bootcamp-project

./: .env  .gitignore  Authentication Service API.postman_collection.json  CLAUDE.md  Caddyfile  Caddyfile.dev  Cargo.toml  Justfile  PATH_TO_PRODUCTION.md  compose.dev.yml  compose.dev.yml.old  compose.override.yml  compose.yml  config.json  docker.sh  testcontainers.md
.github/workflows/: prod.yml
app-service/: .dockerignore  .env  Cargo.toml  Dockerfile  compose.dev.yml  compose.yml
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: .dockerignore  Cargo.toml  Dockerfile  api_schema.yml  compose.dev.yml  compose.yml  config.json
auth-service/.sqlx/: query-1dc3be3ecfa65a9ee98ea34db3dcb2d0228290bdbe0724cca7104262ce3a5281.json  query-47dcc3cc20e441e8dc7cb239fe9c19ac46b0aace176348a337636cf0649c379c.json
auth-service/assets/: app.js  index.html
auth-service/config/: config.json
auth-service/proto/: validation.proto
auth-service/src/: app_state.rs  application.rs  auth_service.rs  auth_service_state.rs  lib.rs  main.rs  settings.rs
auth-service/src/domain/: auth_api_error.rs  email.rs  email_client.rs  error.rs  login.rs  login_attempt_id.rs  mod.rs  password.rs  two_fa_attempt_id.rs  two_fa_code.rs  two_fa_error.rs  user.rs  validated_user.rs
auth-service/src/domain/data_stores/: allowed_origins_store.rs  banned_token_store.rs  mod.rs  two_fa_code_store.rs  two_factor_store.rs  user_store.rs
auth-service/src/requests/: elevate.rs  login.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/responses/: login.rs
auth-service/src/routes/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
auth-service/src/services/: dashset_allowed_origins_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  config.rs  constants.rs  dynamic_cors.rs  mod.rs  tracing.rs
auth-service/tests/api/: delete_account.rs  helpers.rs  login.rs  logout.rs  main.rs  router.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/api/user_api/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
reverse-proxy/: compose.dev.yml  compose.yml
reverse-proxy/.config/: Caddyfile.dev
