[workspace]
members = ["app-service", "auth-service"]

workspace.resolver = "3"
package.version = "0.0.1"
package.edition = "2024"


[workspace.dependencies]
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
regex = "1.11.1"
async-trait = "0.1.89"
thiserror = "2.0.16"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
dashmap = { version = "6.1.0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "cookies",
] }
rand = "0.9.2"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
testcontainers-modules = {version = "0.13.0", features = ["postgres", "blocking", "redis"]}
redis = { version = "0.25.2", features = ["tokio-comp"] }
