[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "cookies",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
