[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
regex.workspace = true
async-trait.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
dotenvy.workspace = true
lazy_static.workspace = true
dashmap.workspace = true
rand.workspace = true
sqlx.workspace = true



[dev-dependencies]
reqwest.workspace = true
