[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/api/main.rs"

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
regex = "1.11.1"
async-trait = "0.1.89"
thiserror = "2.0.16"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
dashmap = { version = "6.1.0", features = ["serde"] }
rand = "0.9.2"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
config = {version = "0.15.17", features = ["json"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"]}
color-eyre = "0.6.3"
tracing-error = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }
arc-swap = {version = "1.7.1", features = ["serde"]}


[dev-dependencies]
testcontainers-modules = {version = "0.13.0", features = ["postgres", "blocking", "redis"]}
libtest-mimic = "0.8.1"
libtest-mimic-collect = "0.3.2"
rustest = "0.3.1"
wiremock = "0.6.0"
fake = "4.4.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
