[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/api/main.rs"

[dependencies]
askama = "0.14"
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "tower"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
regex = "1.12"
async-trait = "0.1"
thiserror = "2.0"
jsonwebtoken = { version = "10.2", default-features = false, features = [
    "rust_crypto",
] }
chrono = "0.4"
dotenvy = "0.15.7"
dashmap = { version = "6.1.0", features = ["serde"] }
rand = "0.9.2"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "1.0.1", features = ["tokio-comp"] }
config = { version = "0.15.19", features = ["json"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
color-eyre = "0.6.5"
tracing-error = "0.2.1"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
arc-swap = { version = "1.7", features = ["serde"] }


[dev-dependencies]
testcontainers-modules = { version = "0.14", features = [
    "postgres",
    "blocking",
    "redis",
] }
libtest-mimic = "0.8"
libtest-mimic-collect = "0.3"
rustest = "0.3"
wiremock = "0.6"
fake = "4.4"
quickcheck = "1.0"
quickcheck_macros = "1.1"
